[project]
dependencies = [
  "ps3838api>=1.0.4",
  "python-dotenv[cli]>=1.2.1",
  "sqlalchemy>=2.0.45",
]
description = "Add your description here"
name = "pinnacle-analytics"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

[tool.pyright]

[dependency-groups]
dev = [
  "ipykernel>=7.1.0",
]
lint = [
    "pyright>=1.1.407",
    "ruff>=0.14.9",
]
