[project]
dependencies = [
  "alembic>=1.17.2",
  "asyncpg>=0.30.0",
  "fastapi>=0.124.4",
  "ps3838api==1.2.0",
  "psycopg2-binary>=2.9.11",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.12.0",
  "python-dotenv[cli]>=1.2.1",
  "sqlalchemy[asyncio]>=2.0.45",
  "uvicorn[standard]>=0.38.0",
]
description = "Add your description here"
name = "pinnacle-analytics"
requires-python = ">=3.13"
version = "0.1.0"

[tool.pyright]
typeCheckingMode = "strict"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
extend-exclude = ["*.ipynb", "**/_version.py", "**/dbx_queries.py"]
indent-width = 4
line-length = 110

[tool.ruff.format]
docstring-code-format = true
exclude = []

[tool.ruff.lint]
exclude = []
fixable = ["I"] # Explicitly set automatic fixes allowed from ruff
ignore = [
  "D", # ignore all docstring errors
  "D202", # no-blank-line-after-function (looks stupid)
  "D413", # blank-line-after-last-section
  "E402", # Allow Module level import not at top of file
  "D105", # Allow missing docstring in magic methods
  "D107", # Allow missing docstring in '__init__'
  "PLC0415", # Allow Module level import not at top of file
  "PLR0913", # Skip too many arguments rules (`PLR0913`).
  "PLR2004", # We ignore magic value errors
  "C901",
  "PLR0912",
  "PLR0915",
  "PLW2901",
  "PLW0120",
]
select = [
  "E", # pycodestyle checks conformity to style conventions in PEP 8. https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
  "PL", # pylint is a static code analyzer that checks for errors, code smells and offer fix suggestions. Pylint: https://docs.astral.sh/ruff/rules/#pylint-pl
  "F", # pyflakes parses and analyzes source code to detects errors. It detects fewer issues than pylint but faster. https://docs.astral.sh/ruff/rules/#pyflakes-f
  "I", # isort sorts imports alphabetically and groups them into relevant sections. https://docs.astral.sh/ruff/rules/#isort-i
  "D", # pydocstyle checks docstrings compliance as per convention. https://docs.astral.sh/ruff/rules/#pydocstyle-d
  "C90", # checks Mccabe cyclomatic complexity is under expected measure. https://en.wikipedia.org/wiki/Cyclomatic_complexity. https://docs.astral.sh/ruff/rules/#mccabe-c90
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*" = [
  "D", # We ingore docstring related stuff. The testing code itself is typically not re-used in any way.
  "PLR2004", # We ignore magic value errors because assert statements typically contain hard coded values.
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]

[dependency-groups]
dev = [
  "ipykernel>=7.1.0",
]
lint = [
  "pyright>=1.1.407",
  "ruff>=0.14.9",
]
